add insert useGeneratedKeys prop
